# Objective-C-LSP

./: .gitignore  .gitmodules  Cargo.toml  FEATURE_ANALYSIS.md  LICENSE  PLANNING.md  PUBLISH_PLANNING.md  README.md  STATUS.md  VS_CODE_FEATURES_PLANNING.md
.cargo/: config.toml
.github/workflows/: release.yml  rust-test.yml  vscode-ext-test.yml
.opencode/: oh-my-opencode.json
crates/objc-intelligence/: Cargo.toml
crates/objc-intelligence/src/: category.rs  code_actions.rs  header_nav.rs  lib.rs  nullability.rs  property.rs  protocol.rs  selector.rs
crates/objc-lsp/: Cargo.toml
crates/objc-lsp/src/: capabilities.rs  dispatch.rs  main.rs  server.rs
crates/objc-project/: Cargo.toml
crates/objc-project/src/: compile_db.rs  lib.rs  sdk.rs  xcodeproj.rs
crates/objc-semantic/: Cargo.toml
crates/objc-semantic/src/: call_hierarchy.rs  completion.rs  crash_guard.rs  diagnostics.rs  formatting.rs  goto_def.rs  hover.rs  implementation.rs  index.rs  lib.rs  protocol_stubs.rs  references.rs  rename.rs  type_hierarchy.rs
crates/objc-store/: Cargo.toml
crates/objc-store/src/: lib.rs  queries.rs  schema.rs
crates/objc-syntax/: Cargo.toml
crates/objc-syntax/src/: folding.rs  header_detect.rs  inlay_hints.rs  lib.rs  parser.rs  symbols.rs  tokens.rs
crates/objc-syntax/tests/: syntax_integration.rs
crates/objc-syntax/tests/fixtures/: Person.h
docs/: STATUS.md  TESTING.md  research-vscode-extension-testing.md
editors/vscode/: .gitignore  .vscode-test.mjs  .vscodeignore  LICENSE  README.md  esbuild.mjs  language-configuration.json  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
editors/vscode/snippets/: objc.json
editors/vscode/src/: callgraph.ts  codelens.ts  commands.ts  config.ts  decorators.ts  extension.ts  hover.ts  install.ts  server.ts  treeviews.ts
editors/vscode/syntaxes/: objc.tmLanguage.json
editors/vscode/test/: runTest.ts
editors/vscode/test/fixtures/workspace/: Sample.m  UITestFixture.m
editors/vscode/test/suite/: codelens.test.ts  commands.test.ts  config.test.ts  decorators.test.ts  extension.test.ts  index.ts  install.test.ts
editors/vscode/test/support/: mockDocument.ts
editors/vscode/test/ui/: addProperty.test.ts  codelens.test.ts  decorators.test.ts  helpers.ts  runUITest.ts
editors/zed/: Cargo.toml  LICENSE  extension.toml
editors/zed/languages/objective-c/: brackets.scm  config.toml  folds.scm  highlights.scm  imports.scm  indents.scm  injections.scm  outline.scm  runnables.scm  textobjects.scm
editors/zed/languages/objective-cpp/: brackets.scm  config.toml  folds.scm  highlights.scm  imports.scm  indents.scm  injections.scm  outline.scm  runnables.scm  textobjects.scm
editors/zed/src/: lib.rs
scripts/: build-ext.sh  build-vsce.sh
tests/fixtures/: Person.m  Robot.h
