[workspace]
resolver = "2"
members = [
    "crates/objc-lsp",
    "crates/objc-syntax",
    "crates/objc-semantic",
    "crates/objc-intelligence",
    "crates/objc-project",
    "crates/objc-store",
]
exclude = ["editors/zed"]

[workspace.dependencies]
# LSP
lsp-server = "0.7"
lsp-types  = "0.97"

# Async
tokio = { version = "1", features = ["full"] }

# Parsing
tree-sitter     = "0.24"
tree-sitter-objc = "3.0.2"
streaming-iterator = "0.1"

# Clang
clang-sys = "1.8"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow   = "1"
thiserror = "1"
regex    = "1"
