[package]
name    = "objc-intelligence"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
objc-syntax = { path = "../objc-syntax" }
objc-store  = { path = "../objc-store" }

lsp-types  = { workspace = true }
tracing    = { workspace = true }
anyhow     = { workspace = true }
[dev-dependencies]
tempfile = "=3.9.0"
