[package]
name    = "objc-lsp"
version = "0.1.0"
edition = "2021"
license.workspace = true

[[bin]]
name = "objc-lsp"
path = "src/main.rs"

[dependencies]
objc-syntax       = { path = "../objc-syntax" }
objc-semantic     = { path = "../objc-semantic" }
objc-intelligence = { path = "../objc-intelligence" }
objc-project      = { path = "../objc-project" }
objc-store        = { path = "../objc-store" }

lsp-server  = { workspace = true }
lsp-types   = { workspace = true }
tokio       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow      = { workspace = true }
serde       = { workspace = true }
