[package]
name    = "objc-project"
version = "0.1.0"
edition = "2021"

[dependencies]
lsp-types  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
tempfile = "=3.9.0"
